--- a/templates/get_url.html
+++ b/templates/get_url.html
@@ -29,8 +29,8 @@
 	  <div class="jumbotron">
 		<h1>Get Download URL</h1>
 		<p>Enter the URL of the file you want to download: </p>
-		<form method="POST">
-				<input name="text">
+		<form action = "/result" method="POST">
+				<input name="text" type="url" placeholder="https://example.com" required >
 				<input type="submit">
 		</form>
 	  </div>
