--- a/templates/new_url_result.html
+++ b/templates/new_url_result.html
@@ -25,11 +25,17 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
+        <p>If you want to see files that you downloaded before, click below: </p>
+        <a class="btn btn-md btn-primary" href="/result" role="button">Old Files</a>
+        <br>
+        <br>
         <h1>Here is the url: </h1>
           <p> <a href="{{output}}">{{output}}</a></p>
           <br>
           <a class="btn btn-md btn-primary" href="/" role="button">Go Back</a>
+          <br>
       </div>
+      <a class="btn btn-md btn-primary" href="/logout" role="button">Logout</a>
 
     </div> <!-- /container -->
   </body>
