--- a/templates/reload_file.html
+++ b/templates/reload_file.html
@@ -41,8 +41,11 @@
 			<input type="checkbox" name="no" value="No"> No<br>
 			<br>
 			<input type="submit">
+            <br>
 		</form>
 	  </div>
+	  <a class="btn btn-md btn-primary" href="/logout" role="button">Logout</a>
+
 	</div> 
   </body>
 </html>
