--- a/templates/result.html
+++ b/templates/result.html
@@ -30,7 +30,7 @@
         <a href={{url}}>{{url}}</a></p>
         {% endfor %}
           <br>
-          <h1>Get Download URL</h1>
+<!--           <h1>Get Download URL</h1>
           <p>Enter the URL of the file you want to download: </p>
           <br>
           <form action = "/new_url" method="POST">
@@ -41,9 +41,10 @@
             <input type="submit">
           </form>
           <br>
-          <a class="btn btn-md btn-primary" href="/" role="button">Go Back</a>
-
+ -->          <a class="btn btn-md btn-primary" href="/" role="button">Go Back</a>
+          <br>
       </div>
+      <a class="btn btn-md btn-primary" href="/logout" role="button">Logout</a>
 
     </div> <!-- /container -->
   </body>
