--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
     <div class="jumbotron">
     <h1>Login</h1>
     <p>Enter your username: </p>
-    <form action = "/result" method="POST">
+    <form action = "/new_url" method="POST">
         <input name="username" type="text" required >
         <input class="btn btn-default" type="submit" value="Login">
     </form>
