--- a/templates/new_url.html
+++ b/templates/new_url.html
@@ -18,7 +18,7 @@
       <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="/">File List</a>
+            <a class="navbar-brand" href="/">New Url</a>
           </div>
         </div><!--/.container-fluid -->
       </nav>
