added new login page

--- a/templates/reload_file.html
+++ b/templates/reload_file.html
@@ -38,7 +38,7 @@
 		<form action="/reload" method="POST">
 			<input type="checkbox" name="yes" value="Yes"> Yes<br>
 			<br>
-			<input type="checkbox" name="no" value="No"> No<br>
+			<!--<input type="checkbox" name="no" value="No"> No<br>-->
 			<br>
 			<input type="submit">
             <br>
