--- a/templates/login.html
+++ b/templates/login.html
@@ -1,40 +1,74 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<head>
+	<meta charset="utf-8">
+	<meta name="author" content="Kodinger">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<title>My Login Page</title>
+	<link rel="stylesheet" type="text/css" href="static/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="static/css/my-login.css">
+</head>
 
-  <title>Get Download URL</title>
+<body class="my-login-page">
+	<section class="h-100">
+		<div class="container h-100">
+			<div class="row justify-content-md-center h-100">
+				<div class="card-wrapper">
+					<div class="brand">
+						<img src="static/img/geturl.png" alt="logo">
+					</div>
+					<div class="card fat">
+						<div class="card-body">
+							<h4 class="card-title">Enter Your Username: </h4>
+							<form action = "/new_url" method="POST" class="my-login-validation" novalidate="">
+								<div class="form-group">
+									<label for="username">Username</label>
+									<input id = "username" name="username" type="text" required class="form-control" required>
+									<!--<div class="invalid-feedback">-->
+										<!--Email is invalid-->
+									<!--</div>-->
+								</div>
 
-  <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-  </head>
+								<!--<div class="form-group">-->
+									<!--<label for="password">Password-->
+										<!--<a href="forgot.html" class="float-right">-->
+											<!--Forgot Password?-->
+										<!--</a>-->
+									<!--</label>-->
+									<!--<input id="password" type="password" class="form-control" name="password" required data-eye>-->
+								    <!--<div class="invalid-feedback">-->
+								    	<!--Password is required-->
+							    	<!--</div>-->
+								<!--</div>-->
 
-  <body>
+								<!--<div class="form-group">-->
+									<!--<div class="custom-checkbox custom-control">-->
+										<!--<input type="checkbox" name="remember" id="remember" class="custom-control-input">-->
+										<!--<label for="remember" class="custom-control-label">Remeber Me</label>-->
+									<!--</div>-->
+								<!--</div>-->
 
-  <div class="container">
+								<div class="form-group m-0">
+									<button type="submit" class="btn btn-primary btn-block">
+										Login
+									</button>
+								</div>
+								<!--<div class="mt-4 text-center">-->
+									<!--Don't have an account? <a href="register.html">Create One</a>-->
+								<!--</div>-->
+							</form>
+						</div>
+					</div>
+					<div class="footer">
+						Copyleft &copy; 2018 &mdash; Kod Gemisi
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-    <!-- Static navbar -->
-    <nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      <a class="navbar-brand" href="/">Get Download URL</a>
-      </div>
-    </div>
-    </nav>
-
-    <div class="jumbotron">
-    <h1>Login</h1>
-    <p>Enter your username: </p>
-    <form action = "/new_url" method="POST">
-        <input name="username" type="text" required >
-        <input class="btn btn-default" type="submit" value="Login">
-    </form>
-    </div>
-  </div> 
-  </body>
+	<script src="static/js/jquery.min.js"></script>
+	<script src="static/bootstrap/js/bootstrap.min.js"></script>
+	<script src="static/js/my-login.js"></script>
+</body>
 </html>
