added database connection

--- a/templates/new_url.html
+++ b/templates/new_url.html
@@ -32,7 +32,7 @@
           <h1>Get Download URL</h1>
           <p>Enter the URL of the file you want to download: </p>
           <br>
-          <form action = "/new_url_result" method="POST">
+          <form action = "/new_url" method="POST">
             <input name="text" type="url" placeholder="https://example.com" required >
             <p>Check below if you want to zip the file</p>
             <input type="checkbox" name="zip" value="Zip"> Zip <br>
