--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
 					<div class="card fat">
 						<div class="card-body">
 							<h4 class="card-title">Enter Your Username: </h4>
-							<form action = "/new_url" method="POST" class="my-login-validation" novalidate="">
+							<form action = "/login" method="POST" class="my-login-validation" novalidate="">
 								<div class="form-group">
 									<label for="username">Username</label>
 									<input id = "username" name="username" type="text" required class="form-control" required>
@@ -29,17 +29,17 @@
 									<!--</div>-->
 								</div>
 
-								<!--<div class="form-group">-->
-									<!--<label for="password">Password-->
-										<!--<a href="forgot.html" class="float-right">-->
-											<!--Forgot Password?-->
-										<!--</a>-->
-									<!--</label>-->
-									<!--<input id="password" type="password" class="form-control" name="password" required data-eye>-->
-								    <!--<div class="invalid-feedback">-->
-								    	<!--Password is required-->
-							    	<!--</div>-->
-								<!--</div>-->
+								<div class="form-group">
+									<label for="password">Password
+										<a href="forgot.html" class="float-right">
+											Forgot Password?
+										</a>
+									</label>
+									<input id="password" type="password" class="form-control" name="password" required data-eye>
+								    <div class="invalid-feedback">
+								    	Password is required
+							    	</div>
+								</div>
 
 								<!--<div class="form-group">-->
 									<!--<div class="custom-checkbox custom-control">-->
@@ -53,9 +53,19 @@
 										Login
 									</button>
 								</div>
-								<!--<div class="mt-4 text-center">-->
-									<!--Don't have an account? <a href="register.html">Create One</a>-->
-								<!--</div>-->
+								{% with messages = get_flashed_messages() %}
+								{% if messages %}
+								<ul class=flashes>
+									{% for message in messages %}
+									<li>{{ message }}</li>
+									{% endfor %}
+								</ul>
+								{% endif %}
+								{% endwith %}
+								{% block body %}{% endblock %}
+								<div class="mt-4 text-center">
+									Don't have an account? <a href="register">Create One</a>
+								</div>
 							</form>
 						</div>
 					</div>
