--- a/templates/register.html
+++ b/templates/register.html
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 					<div class="footer">
-						Copyright &copy; 2017 &mdash; Your Company 
+						Copyleft &copy; 2018 &mdash; Kod Gemisi
 					</div>
 				</div>
 			</div>
@@ -68,6 +68,6 @@
 
 	<script src="static/js/jquery.min.js"></script>
 	<script src="static/bootstrap/js/bootstrap.min.js"></script>
-	<script src="static/js/my-login.js"></script>
+	<script src="static/js/elifcan.js"></script>
 </body>
 </html>
