--- a/templates/reload_file.html
+++ b/templates/reload_file.html
@@ -58,5 +58,7 @@
 	<a class="btn btn-md btn-primary" href="/logout" role="button">Logout</a>
 
 </div>
+<script src="static/js/elifcan.js"></script>
+
 </body>
 </html>
