--- a/templates/new_url.html
+++ b/templates/new_url.html
@@ -45,5 +45,7 @@
       </div>
       <a class="btn btn-md btn-primary" href="/logout" role="button">Logout</a>
     </div> <!-- /container -->
+  	<script src="static/js/elifcan.js"></script>
+
   </body>
 </html>
