--- a/templates/new_url_result.html
+++ b/templates/new_url_result.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Get Download URL</title>
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Get Download URL</title>
+  <!-- Bootstrap core CSS -->
+  <link href="static/css/bootstrap.min.css" rel="stylesheet">
+</head>
 
-  <body>
+<body>
 
-    <div class="container">
+<div class="container">
 
-      <!-- Static navbar -->
-      <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="/">Get Download URL</a>
-          </div>
-        </div><!--/.container-fluid -->
-      </nav>
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <p>If you want to see files that you downloaded before, click below: </p>
-        <a class="btn btn-md btn-primary" href="/result" role="button">Old Files</a>
-        <br>
-        <br>
-        <h1>Here is the url: </h1>
-          <p> <a href="{{output}}">{{output}}</a></p>
-          <br>
-          <a class="btn btn-md btn-primary" href="/" role="button">Go Back</a>
-          <br>
+  <!-- Static navbar -->
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Get Download URL</a>
       </div>
-      <a class="btn btn-md btn-primary" href="/logout" role="button">Logout</a>
+    </div><!--/.container-fluid -->
+  </nav>
 
-    </div> <!-- /container -->
-  </body>
+  <!-- Main component for a primary marketing message or call to action -->
+  <div class="jumbotron">
+    <p>If you want to see files that you downloaded before, click below: </p>
+    <a class="btn btn-md btn-primary" href="/result" role="button">Old Files</a>
+    <br>
+    <br>
+    <h1>Here is the url: </h1>
+    <p> <a href="{{output}}">{{output}}</a></p>
+    <br>
+    <a class="btn btn-md btn-primary" href="/" role="button">Go Back</a>
+    <br>
+  </div>
+  <a class="btn btn-md btn-primary" href="/logout" role="button">Logout</a>
+
+</div> <!-- /container -->
+<script src="static/js/elifcan.js"></script>
+
+</body>
 </html>
 
 
