--- a/templates/result.html
+++ b/templates/result.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>File List</title>
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>File List</title>
+  <!-- Bootstrap core CSS -->
+  <link href="static/css/bootstrap.min.css" rel="stylesheet">
+</head>
 
-  <body>
+<body>
 
-    <div class="container">
+<div class="container">
 
-      <!-- Static navbar -->
-      <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="/">File List</a>
-          </div>
-        </div><!--/.container-fluid -->
-      </nav>
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Files you downloaded before:</h1>
-        {% for url in url_list %}
-        <a href={{url}}>{{url}}</a></p>
-        {% endfor %}
-          <br>
-<!--           <h1>Get Download URL</h1>
-          <p>Enter the URL of the file you want to download: </p>
-          <br>
-          <form action = "/new_url" method="POST">
-            <input name="text" type="url" placeholder="https://example.com" required >
-            <p>Check below if you want to zip the file</p>
-            <input type="checkbox" name="zip" value="Zip"> Zip <br>
-            <br>
-            <input type="submit">
-          </form>
-          <br>
- -->          <a class="btn btn-md btn-primary" href="/" role="button">Go Back</a>
-          <br>
+  <!-- Static navbar -->
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">File List</a>
       </div>
-      <a class="btn btn-md btn-primary" href="/logout" role="button">Logout</a>
+    </div><!--/.container-fluid -->
+  </nav>
 
-    </div> <!-- /container -->
-  </body>
+  <!-- Main component for a primary marketing message or call to action -->
+  <div class="jumbotron">
+    <h1>Files you downloaded before:</h1>
+    {% for url in url_list %}
+    <a href={{url}}>{{url}}</a></p>
+    {% endfor %}
+    <br>
+    <!--           <h1>Get Download URL</h1>
+              <p>Enter the URL of the file you want to download: </p>
+              <br>
+              <form action = "/new_url" method="POST">
+                <input name="text" type="url" placeholder="https://example.com" required >
+                <p>Check below if you want to zip the file</p>
+                <input type="checkbox" name="zip" value="Zip"> Zip <br>
+                <br>
+                <input type="submit">
+              </form>
+              <br>
+     -->          <a class="btn btn-md btn-primary" href="/" role="button">Go Back</a>
+    <br>
+  </div>
+  <a class="btn btn-md btn-primary" href="/logout" role="button">Logout</a>
+
+</div> <!-- /container -->
+<script src="static/js/elifcan.js"></script>
+
+</body>
 </html>
