--- a/templates/register.html
+++ b/templates/register.html
@@ -21,11 +21,20 @@
 							<h4 class="card-title">Register</h4>
 							<form action = "/register" method="POST" class="my-login-validation" novalidate="">
 
+
+								<div class="form-group">
+									<label for="email">E-mail</label>
+									<input id ="email" name= "email" type="text" required pattern="[a-z0-9._%+-]+@[kodgemisi]+\.[com]{2,}$" class="form-control" required>
+									<div class="invalid-feedback">
+										Your email should be as @kodgemisi.com
+									</div>
+								</div>
+
 								<div class="form-group">
 									<label for="username">Username</label>
 									<input id ="username" name= "username" type="text" required class="form-control" required>
 									<div class="invalid-feedback">
-										Your username is invalid
+										Username is required
 									</div>
 								</div>
 
@@ -36,7 +45,6 @@
 										Password is required
 									</div>
 								</div>
-
 								<!--<div class="form-group">-->
 									<!--<div class="custom-checkbox custom-control">-->
 										<!--<input type="checkbox" name="agree" id="agree" class="custom-control-input" required="">-->
@@ -52,6 +60,17 @@
 										Register
 									</button>
 								</div>
+								{% with messages = get_flashed_messages() %}
+								{% if messages %}
+								<ul class=flashes>
+									{% for message in messages %}
+									<br>
+									<mark><b>{{ message }}</b></mark>
+									{% endfor %}
+								</ul>
+								{% endif %}
+								{% endwith %}
+								{% block body %}{% endblock %}
 								<div class="mt-4 text-center">
 									Already have an account? <a href="/">Login</a>
 								</div>
