--- a/templates/login.html
+++ b/templates/login.html
@@ -31,9 +31,9 @@
 
 								<div class="form-group">
 									<label for="password">Password
-										<!--<a href="forgot.html" class="float-right">-->
-											<!--Forgot Password?-->
-										<!--</a>-->
+										<a href="forgot" class="float-right">
+											Forgot Password?
+										</a>
 									</label>
 									<input id="password" type="password" class="form-control" name="password" required data-eye>
 								    <div class="invalid-feedback">
