--- a/templates/reset.html
+++ b/templates/reset.html
@@ -5,8 +5,8 @@
 	<meta name="author" content="Kodinger">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>My Login Page &mdash; Bootstrap 4 Login Page Snippet</title>
-	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/my-login.css">
+	<link rel="stylesheet" type="text/css" href="static/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="static/css/my-login.css">
 </head>
 <body class="my-login-page">
 	<section class="h-100">
@@ -14,13 +14,15 @@
 			<div class="row justify-content-md-center align-items-center h-100">
 				<div class="card-wrapper">
 					<div class="brand">
-						<img src="img/logo.jpg" alt="bootstrap 4 login page">
+						<img src="static/img/geturl.png" alt="bootstrap 4 login page">
 					</div>
 					<div class="card fat">
 						<div class="card-body">
 							<h4 class="card-title">Reset Password</h4>
 							<form method="POST" class="my-login-validation" novalidate="">
 								<div class="form-group">
+									<input id="email" type="hidden" class="form-control" name="email" value={{email}} required autofocus>
+
 									<label for="new-password">New Password</label>
 									<input id="new-password" type="password" class="form-control" name="password" required autofocus data-eye>
 									<div class="invalid-feedback">
@@ -40,14 +42,14 @@
 						</div>
 					</div>
 					<div class="footer">
-						Copyright &copy; 2017 &mdash; Your Company 
+						Copyleft &copy; 2019 &mdash; Kod Gemisi
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<script src="js/jquery.min.js"></script>
-	<script src="js/my-login.js"></script>
+	<script src="static/js/jquery.min.js"></script>
+	<script src="static/js/elifcan.js"></script>
 </body>
 </html>
