changed position of flash messages

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="author" content="Kodinger">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>My Login Page</title>
+	<title>Get Url</title>
 	<link rel="stylesheet" type="text/css" href="static/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="static/css/my-login.css">
 </head>
@@ -20,6 +20,18 @@
 					<div class="card fat">
 						<div class="card-body">
 							<h4 class="card-title">Enter Your Username: </h4>
+								{% with messages = get_flashed_messages() %}
+								{% if messages %}
+								<ul class=flashes>
+									{% for message in messages %}
+									<br>
+									<mark><b>{{ message }}</b></mark>
+									{% endfor %}
+								</ul>
+								{% endif %}
+								{% endwith %}
+								{% block body %}{% endblock %}
+
 							<form action = "/login" method="POST" class="my-login-validation" novalidate="">
 								<div class="form-group">
 									<label for="username">Username</label>
@@ -53,17 +65,6 @@
 										Login
 									</button>
 								</div>
-								{% with messages = get_flashed_messages() %}
-								{% if messages %}
-								<ul class=flashes>
-									{% for message in messages %}
-									<br>
-									<mark><b>{{ message }}</b></mark>
-									{% endfor %}
-								</ul>
-								{% endif %}
-								{% endwith %}
-								{% block body %}{% endblock %}
 								<div class="mt-4 text-center">
 									Don't have an account? <a href="register">Create One</a>
 								</div>
