--- a/templates/register.html
+++ b/templates/register.html
@@ -26,7 +26,7 @@
 									<label for="email">E-mail</label>
 									<input id ="email" name= "email" type="text" required pattern="[a-z0-9._%+-]+@[kodgemisi]+\.[com]{2,}$" class="form-control" required>
 									<div class="invalid-feedback">
-										Your email should be as @kodgemisi.com
+										Invalid mail
 									</div>
 								</div>
 
