--- a/templates/register_validation.html
+++ b/templates/register_validation.html
@@ -31,28 +31,25 @@
 								{% endwith %}
 								{% block body %}{% endblock %}
 
-							<form action = "/register" method="POST" class="my-login-validation" novalidate="">
+							<form action = "/register_validation" method="POST" class="my-login-validation" novalidate="">
 								<div class="form-group">
-									<label for="email">E-mail</label>
-									<input id ="email" name= "email" type="text" required pattern="[a-z0-9._%+-]+@[kodgemisi]+\.[com]{2,}$" class="form-control" required>
+									<input id ="email" name= "email" type="hidden" required pattern="[a-z0-9._%+-]+@[kodgemisi]+\.[com]{2,}$" class="form-control" value={{email}} required>
 									<div class="invalid-feedback">
-										You can only register with @kodgemisi.com mail address.
+										Invalid mail
 									</div>
 								</div>
 
 								<div class="form-group">
-									<label for="username">Username</label>
-									<input id ="username" name= "username" type="text" required class="form-control" required>
+									<input id ="username" name= "username" type="hidden" required class="form-control" value={{username}} required>
 									<div class="invalid-feedback">
-										Username is required.
+										Username is required
 									</div>
 								</div>
 
 								<div class="form-group">
-									<label for="password">Password</label>
-									<input id="password" type="password" required class="form-control" name="password" required data-eye>
+									<input id="password" type="hidden" required class="form-control" name="password" value={{password}} required data-eye>
 									<div class="invalid-feedback">
-										Password is required.
+										Password is required
 									</div>
 								</div>
 								<!--<div class="form-group">-->
@@ -67,7 +64,7 @@
 
 								<div class="form-group m-0">
 									<button type="submit" class="btn btn-primary btn-block">
-										Register
+										Click to validate your email
 									</button>
 								</div>
 								<div class="mt-4 text-center">
